# MLX-LoRA-and-RLHF

./: .gitignore  README.md  pyproject.toml
AB/: MoMoeClassifier.py  dataset.py  docker-compose.yml  dockerfile.streamlit  pyproject.toml  qwen3mod.py
AB/UI/: Andrei.py  Home.py  MoMoE.py  MoMoEClassifier.pth  MoMoEWeights.pth  TLDR.py  Ui.py  classifierdata.csv  vectorizer.pkl
AB/n8n_data/: config  database.sqlite
AB/redis_api/: Dockerfile  pyproject.toml  redis_api.py
az/: reward_model.py  train_reward_model.py
ethan_src/: SFT-gpt2-sum.ipynb  article_followthrough.ipynb
jacob/: sandbox.ipynb
