[project]
name = "mlx-lora-and-rlhf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "ipykernel>=6.29.5",
    "peft>=0.16.0",
    "rouge-score>=0.1.2",
    "torch>=2.7.1",
]
